fixing product info spacing

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -563,7 +563,7 @@ a.back-to-shop:hover {
   float: right;
   width: 52vw;
   text-align: left;
-  margin: 2vw;
+  margin: 0vw 2vw 2vw 2vw;
   margin-right: 4vw;
   //margin-left: 50vw;
 
@@ -583,7 +583,6 @@ a.back-to-shop:hover {
 
 .product-image {
   float: left;
-  margin-top: -0.5vw;
   margin-left: 5vw;
 }
 
